Fix menu alignment

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -29,6 +29,8 @@
 
 	button {
 		color: #fff;
+		margin-top: 20px;
+		margin-bottom: 18px;
 	}
 
 	.logo {
